charon/tests/ui/non-lifetime-gats.out
error: Generic associated types are not supported
 --> tests/ui/non-lifetime-gats.rs:5:5
  |
5 |     type Pointer<T>: Deref<Target = T>;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Ignoring the following item due to a previous error: test_crate::PointerFamily
 --> tests/ui/non-lifetime-gats.rs:4:1
  |
4 | trait PointerFamily {
  | ^^^^^^^^^^^^^^^^^^^

error: Generic associated types are not supported
  --> tests/ui/non-lifetime-gats.rs:34:9
   |
34 |         type Type<U>: Link<T>;
   |         ^^^^^^^^^^^^^^^^^^^^^

error: Ignoring the following item due to a previous error: test_crate::moar_variables::Trait
  --> tests/ui/non-lifetime-gats.rs:33:5
   |
33 |     trait Trait<T> {
   |     ^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

ERROR Compilation encountered 4 errors
